--- a/yelb-ui/clarity-seed-newfiles/src/app/app.component.html
+++ b/yelb-ui/clarity-seed-newfiles/src/app/app.component.html
@@ -10,7 +10,7 @@
             <div class="branding">
                 <a href="javascript://">
                     <clr-icon shape="user"></clr-icon>
-                    <span class="title">Yelb</span>
+                    <span class="title">AnyCompany Travel</span>
                 </a>
             </div>
         </header>
@@ -18,8 +18,8 @@
         <div class="content-container">
             <div class="content-area">
                 <div class="center">
-                    <h2 class="aligned-center">Welcome to Yelb, the only hub for healthy food recommendations!</h2>
-<!--                    <p class="aligned-center">The only hub for healthy food recommendations. We will take care of your diet!</p> -->
+                    <h2 class="aligned-center">Welcome to AnyCompany Travel Portal!</h2>
+                    <p class="aligned-center">Give us feedback for your favourite travel destination!</p>
 
                     <div class="separator"></div>
 
@@ -28,11 +28,11 @@
                         <div class="col-sm-12 col-md-6 col-xl-3">
                             <div class="card">
                                 <div class="card-header">
-                                    <clr-icon shape="grid-view" dir="up" class="-color6" size="24" style="color: #374E61; width: 24px; height: 24px;"></clr-icon> IHOP
+                                    <clr-icon shape="grid-view" dir="up" class="-color6" size="24" style="color: #374E61; width: 24px; height: 24px;"></clr-icon> Maldives!
                                 </div>
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item">
-                                        <a href="http://www.ihop.com/" target="_blank"><b>Pancakes</b>, for a powerful start!</a>
+                                        <a href="http://www.ihop.com/" target="_blank"><b>Maldives</b>, for a relaxing break!</a>
                                     </li>
                                 </ul>
                                 <div class="card-footer">
@@ -44,11 +44,11 @@
                         <div class="col-sm-12 col-md-6 col-xl-3">
                             <div class="card">
                                 <div class="card-header">
-                                    <clr-icon shape="cloud" dir="up" class="-color6" size="24" style="color: #d20059; width: 24px; height: 24px;"></clr-icon> Chipotle
+                                    <clr-icon shape="cloud" dir="up" class="-color6" size="24" style="color: #d20059; width: 24px; height: 24px;"></clr-icon> Switzerland
                                 </div>
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item">
-                                        <a href="https://www.chipotle.com/" target="_blank"><b>Burritos</b>, for a mid-day break!</a>
+                                        <a href="https://www.chipotle.com/" target="_blank"><b>Switzerland</b>, for a ski trip!</a>
                                     </li>
                                 </ul>
                                 <div class="card-footer">
@@ -61,11 +61,11 @@
                         <div class="col-sm-12 col-md-6 col-xl-3">
                             <div class="card">
                                 <div class="card-header">
-                                    <clr-icon shape="compass" dir="up" class="-color6" size="24" style="color: #00A98C; width: 24px; height: 24px;"></clr-icon> Outback
+                                    <clr-icon shape="compass" dir="up" class="-color6" size="24" style="color: #00A98C; width: 24px; height: 24px;"></clr-icon> Egypt
                                 </div>
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item">
-                                        <a href="https://www.outback.com/" target="_blank"><b>Blooming onion</b>, what else?</a>
+                                        <a href="https://www.outback.com/" target="_blank"><b>Egypt</b>, for ancient history</a>
                                     </li>
                                 </ul>
                                 <div class="card-footer">
@@ -77,11 +77,11 @@
                         <div class="col-sm-12 col-md-6 col-xl-3">
                             <div class="card">
                                 <div class="card-header">
-                                    <clr-icon shape="dollar-bill" dir="up" class="-color6" size="24" style="color: #318700; width: 24px; height: 24px;"></clr-icon> Buca di Beppo
+                                    <clr-icon shape="dollar-bill" dir="up" class="-color6" size="24" style="color: #318700; width: 24px; height: 24px;"></clr-icon> Las Vegas
                                 </div>
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item">
-                                        <a href="http://www.bucadibeppo.com/" target="_blank"><b>Lasagne</b>, this is heaven!</a>
+                                        <a href="http://www.bucadibeppo.com/" target="_blank"><b>Las Vegas</b>, to win it all!</a>
                                     </li>
                                 </ul>
                                 <div class="card-footer">
@@ -122,7 +122,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-12 col-md-6 col-xl-3">
+                        <!-- <div class="col-sm-12 col-md-6 col-xl-3">
                             <div class="card">
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item">
@@ -130,7 +130,7 @@
                                     </li>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
 
               </div>          
 
@@ -150,7 +150,7 @@
 
                     <div class="separator"></div>
 
-                    <div class="row">
+                    <!-- <div class="row">
 
                         <div style="width: 100%; margin-left: 0px; margin-right: 0px;">
                             <h3 class="aligned-left" style="display: block;">Common Cloud Experiences Patterns and Libraries</h3>
@@ -168,7 +168,7 @@
                         </div>
 
                         
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
