Update ui files

--- a/yelb-ui/clarity-seed-newfiles/src/app/app.component.html
+++ b/yelb-ui/clarity-seed-newfiles/src/app/app.component.html
@@ -20,6 +20,7 @@
                 <div class="center">
                     <h2 class="aligned-center">Welcome to AnyCompany Travel Portal!</h2>
                     <p class="aligned-center">Give us feedback for your favourite travel destination!</p>
+                    <h3 class="aligned-center">Latest offer: Book your stay in <b><u>Egypt for {{offers.offers}} per day</u></b></h3>
 
                     <div class="separator"></div>
 
@@ -122,11 +123,21 @@
                             </div>
                         </div>
 
-                        <!-- <div class="col-sm-12 col-md-6 col-xl-3">
+                        <div class="col-sm-12 col-md-6 col-xl-3">
                             <div class="card">
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item">
                                         <a target="_blank">App Server: <b><u>{{stats.hostname}}</u></b></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <!-- <div class="col-sm-12 col-md-6 col-xl-3">
+                            <div class="card">
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">
+                                        <a target="_blank">Latest offer: Book your stay in Egypt for <b><u>{{offers.offers}} per day</u></b></a>
                                     </li>
                                 </ul>
                             </div>
